[package]
name = "docker_queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "docker_queue"
path = "src/main.rs"

[dependencies]
bollard = "0.11"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
axum = "0.3"
tower-http = { version = "0.1", features = ["fs", "trace"] }

tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
# log = "0.4"

[dev-dependencies]
reqwest = { version = "0.11.4", default-features = false, features = ["json", "rustls-tls"] }
once_cell = "1.8"
